src/main/java/com/example/autorepairshop/error/ClientNotFoundException.java
package com.example.autorepairshop.error;

public class ClientNotFoundException extends RuntimeException {
    public ClientNotFoundException(String message) {
        super(message);
    }
}
